--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <!-- Typekit font js dependency -->
   <script src="https://use.typekit.net/zsb0fok.js"></script>
-  <script>try{Typekit.load({ async: false });}catch(e){}</script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   <%= render 'layouts/shim' %>
 
