--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -24,10 +24,10 @@
 
 .masonry-item {
  display: inline-block;
- margin: 10px 0 0 0;
+ margin: 0 0 14px 0;
  width:  100%; 
  background:  #efefef;
- box-shadow: 1px 1px 2px 0 #7b7b7b;
+ box-shadow: 1px 1px 1px 0 #7b7b7b;
 }
 
 .masonry-item img {
