--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -6,8 +6,6 @@
 
 <% provide(:page_title, "Show Record") %>
 
-<p id="notice"><%= notice %></p>
-
 <div class="small-banner-image-container students-image"></div>
 
 <div class="white-background">
@@ -36,18 +34,17 @@
 
       <% if @record.content_type == "Image" %>
         <div class="record-display-container">
-          <%= image_tag @record.file_upload.url(:medium) %>
+          <%= image_tag @record.file_upload.url(:medium), :alt => @record.title %>
         </div>
 
       <% elsif @record.content_type == "Video" %>
         <div class="record-display-container">
-          <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", class: "loaded-media loaded-video", controls: true ) %>
+          <%= video_tag( @record.file_upload.url, poster: @record.file_upload.url(:medium), size: "300x300", class: "loaded-media loaded-video", controls: true, alt: @record.title ) %>
         </div>
-
 
       <% elsif @record.content_type == "Audio" %>
         <div class="record-display-container">
-          <%= audio_tag( @record.file_upload.url, controls: true,  class: "loaded-media loaded-audio", autoplay: true ) %>
+          <%= audio_tag( @record.file_upload.url, controls: true,  class: "loaded-media loaded-audio", autoplay: true, alt: @record.title ) %>
         </div>
       <% end %>
 
