--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -11,7 +11,7 @@
 <div class="white-background">
   <div class="container">
     <div class="padding-sides">
-      <h4 class="text-center">Confirmation</h4>
+      <h1 class="text-center">Confirmation</h1>
 
       <div class="preface-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eusimod accumsan est. Nonnec at bibendum tortor, vel elementum arcu. Duis quis nisi ac sem tempus elementum.</div>
     </div>
@@ -24,12 +24,15 @@
       
       <div class="over-image-row">
         <h3 class="record-title"> <%= @record.title %></h3> 
-        <div class="btn-group" id="edit-record-button">
-          <%= link_to "Edit", 
-             {:controller => :records, :action => :edit,
-              :record => @record.id},
-             :class => "btn btn-primary blue-button" %>
+      
+        <div class="btn-group modify-record-button">
+          <%= link_to "Delete", record_path(@record), :method => :delete, :class => "btn btn-primary blue-button" %>
         </div>
+
+        <div class="btn-group modify-record-button margin-right">
+          <%= link_to "Edit", edit_record_path(@record), :class => "btn btn-primary blue-button" %>
+        </div>
+
       </div>
 
       <% if @record.content_type == "Image" %>
