don't display the div in which we store whether the user wanted to include their name with the record

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -219,6 +219,14 @@ span.btn.btn-small.btn-default.btn-inverse {
   margin-bottom: 20px;
 }
 
+/**************
+* record#edit *
+**************/
+
+.should-include-name {
+  display: none;
+}
+
 /****************
 * mobile styles *
 ****************/
