add div to record#edit in which we can store a value {0,1} that indicates whether user wanted to include name in record

--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -7,10 +7,11 @@
 <% provide(:page_title, "Edit Record") %>
 
 <div class="small-banner-image-container students-image"></div>
-
+<div class="should-include-name"><%= @include_user_name %></div>
 <div class="container">
   <div class="padding-sides padding-bottom">
-    <h1 class="center-text">Editing record</h1>
+    <h1>Editing Record</h1>
+
     <%= render 'form' %>
   </div>
 </div>
