remove unnecessary styling in contact_forms#new

--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="padding-sides">
-    <h1 class="center-text">Contact Us</h1>
+    <h1>Contact Us</h1>
 
     <div class="preface-text">Lorem ipsum dolor sit amet, odio eget vivamus non enim, wisi et elementum eget porta conubia et, congue sed augue eros dui justo eget, leo vivamus, ut mauris eget et semper. In placerat rhoncus sem, vivamus tincidunt fermentum pretium gravida sapien maecenas, placerat enim, lorem morbi nibh facilisis nunc. Vehicula et dui lobortis et, dignissim qui vivamus posuere blandit magnis libero. Augue accumsan. Nibh nibh turpis, ultrices imperdiet dui sodales morbi.</div>
 
