--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -10,6 +10,10 @@
 
 <div class="small-banner-image-container students-image"></div>
 
+<div class="container">
+  <%= render 'search_form' %>
+</div>
+
 <div class="gray-background">
   <div class="container">
     
