add placeholder styling for search box to user css

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -45,3 +45,15 @@
   border: none;
   box-shadow: none;
 }
+
+/*************
+* search box *
+*************/
+
+input.btn.btn-primary.btn-lg {
+  width: 100%;
+}
+
+.input-group.input-group-lg {
+  margin-top: 20px;
+}
