prettify the plaintext message sent from the mailer

--- a/app/views/contact_mailer/contact_email.text.erb
+++ b/app/views/contact_mailer/contact_email.text.erb
@@ -1,2 +1,1 @@
-Record title: <%= @contact_form.message %>
-Sample email with text content
+A user of the Voices app sent along the following message: <%= @contact_form.message %>
