add placeholder for saved date in records#edit html

--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -7,7 +7,8 @@
 <% provide(:page_title, "Edit Record") %>
 
 <div class="small-banner-image-container students-image"></div>
-<div class="should-include-name"><%= @include_user_name %></div>
+<div class="should-include-name hidden-field"><%= @include_user_name %></div>
+<div class="should-include-date hidden-field"><%= @saved_date %></div>
 <div class="container">
   <div class="padding-sides padding-bottom">
     <h1>Editing Record</h1>
