--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -19,21 +19,23 @@
 </div>
 
 <div class="gray-background">
-  <div class="container">
-    <div class="padding-sides padding-bottom"> 
+  <div class="container padding-bottom">
+    <div class="padding-sides"> 
       
       <div class="over-image-row">
         <h3 class="record-title"> <%= @record.title %></h3> 
       
-        <div class="btn-group modify-record-button">
-          <%= link_to "Delete", record_path(@record), :method => :delete, :class => "btn btn-primary blue-button" %>
+        
+          <div class="btn-group modify-record-button">
+            <%= link_to "Delete", record_path(@record), 
+              :method => :delete, :class => "btn btn-primary blue-button" %>
+          </div>
+          <div class="btn-group modify-record-button margin-right">
+            <%= link_to "Edit", edit_record_path(@record), 
+              :class => "btn btn-primary blue-button" %>
+          </div>
         </div>
-
-        <div class="btn-group modify-record-button margin-right">
-          <%= link_to "Edit", edit_record_path(@record), :class => "btn btn-primary blue-button" %>
-        </div>
-
-      </div>
+        
 
       <% if @record.content_type == "Image" %>
         <div class="record-display-container">
